--- a/upload.html
+++ b/upload.html
@@ -29,40 +29,47 @@
                             </div>  
                         <div class="form-group ">
                                 <input id="productName" type="text" name="productName" placeholder="Enter Product Name"
-                                    class="form-name form-control" >
-                        </div>
-                    
-                        <div class="form-group ">
-                                <input type="text" id="town" list="cate" name="category" class="form-control" placeholder="Select Category">
-                                <datalist id="cate">
-                                    <option value="Maroua">
-                                    <option value="Garoua">
-                                    <option value="Yaounde">
-                                    <option value="Douala">
-                                    <option value="Bertoua">
-                                    <option value="Edea">
-                                    <option value="Buea">
-                                    <option value="Bamenda">
-                                    <option value="Ngaoundere">
-                                    <option value="Baffoussam">
-                                </datalist>
+                                    class="form-control">
                         </div>
                         <div class="form-group ">
-                            <input type="text" name="subcat" list="scat" id="subcat" class="form-control"
-                            placeholder="Select Sub Category">
-                            <datalist id="scat">
-                                <option value="Centre">
-                                <option value="Littoral">
-                                <option value="West">
-                                <option value="South west">
-                                <option value="North west">
-                                <option value="North">
-                                <option value="Adamawa">
-                                <option value="South">
-                                <option value="East">
-                                <option value="sss">
-                            </datalist>
-                        </div>
+                            <select class="form-control select-cat" >
+                                <option value="#">Select Product Category</option>
+                              <optgroup label="Fashion">
+                                <option>Men Clothing</option>
+                                <option>Women Clothing</option>
+                                <option>Men Footwear</option>
+                                <option>Women Footwear</option>
+                                <option>Men Watches and Jewelry</option>
+                                <option>Women Watche and jewelry</option>
+                                <option>Babies and Kid</option>
+                                <option>Health and Beauty</option>
+                              </optgroup>
+                              <optgroup label="Electronic">
+                                <option>Phones</option>
+                                <option>Tablets</option>
+                                <option>Computers</option>
+                                <option>Phones Accessories</option>
+                                <option>Computer Accessories</option>
+                                <option>Digital Cameras</option>
+                                <option>Gaming Conosole</option>
+                                <option>Television</option>
+                                <option>peakers and Home audio</option>
+                              </optgroup>
+                              <optgroup label="Real estate">
+                                <option>Room and Apartment for rent</option>
+                                <option>Room and Apartment for sale</option>
+                                <option>Land and plot for rent</option>
+                                <option>Land and plot for sale</option>
+                                <option>Commercial property for rent</option>
+                                <option>Commercial property for sale</option>
+                              </optgroup>
+                              <optgroup label="Automobile">
+                                <option>Cars and Truck</option>
+                                <option>Motorcyle and Bicycle</option>
+                                <option>Car parts and Accessories</option>
+                                <option>Motorcycle parts and Accessories</option>
+                              </optgroup>
+                            </select>
                         <div class="form-group ">
                                 <input type="text" name="region" list="regions" id="region" class="form-control" placeholder="Select Region">
                                 <datalist id="regions">
