--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="d-flex flex-column">
 
             <div class="profile">
-                <img src="tagem.jpg" alt="" class="img-fluid rounded-circle">
+                <img src="log.jpg" alt="" class="img-fluid rounded-circle">
                 <h1 class="text-light"><a href="index.html">Kwatabato</a></h1>
                 <div class="social-links mt-3 text-center">
                     <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -73,26 +73,22 @@
     <!-- End Header -->
 
     <!-- ======= Hero Section ======= -->
+
     <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
         <div class="hero-container" data-aos="fade-in">
             <h1>Kwatbato</h1>
             <p><span class="typed" data-typed-items="Sell your What you have, Buy what you need, All for free, with KwatBato"></span></p>
         </div>
         <div class="hero-container">
-            <div class="form-row">
-                <div class="form-group col-md-12 col-lg-12 col-sm-12">
-                    <input type="text" class="form-control col-lg-12" placeholder="What are you looking for...">
-                    <button class="btn btn-success btn-md-12 btn-sm-12 center">Seacrh</button>
-                </div>
-
-            </div>
-
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </div>
     </section>
     <!-- End Hero -->
 
     <main id="main">
-
         <!-- ======= Portfolio Section ======= -->
         <section id="portfolio" class="portfolio section-bg">
             <div class="container">
@@ -115,7 +111,7 @@
 
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-                    <div class="col-lg-3 col-md-6 col-sm-6 portfolio-item filter-app">
+                    <div class="col-lg- col-md-6 col-sm-6 portfolio-item filter-app">
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                             <div class="portfolio-links">
