--- a/index.html
+++ b/index.html
@@ -38,6 +38,22 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
+        <a href="#" class="navbar-brand"><img src="log.jpg" height="50px" width="100px"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#list">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="collapse navbar-collapse" id="list">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="login.html" class="nav-link">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a href="register.html" class="nav-link">Register</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <!-- ======= Header ======= -->
     <header id="header">
         <div class="d-flex flex-column">
