--- a/login.html
+++ b/login.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,7 +12,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     <!-- Favicon and touch icons -->
     <link rel="shortcut icon" href="assets/ico/favicon.png">
-        <script src="forus.js"></script>
+    <script src="forus.js"></script>
 
 </head>
 
@@ -21,45 +20,46 @@
     <div class="container ">
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-8 col-xs-12 form-container text-center">
-                        <form role="form">
-                              <div class="form-title">
-                                    <a href="index.html" class="nav-link">
-                                        <img src="log.jpg" height="100px" width="100px">
-                                    </a>
-                            </div>
-                            <div class="form-body">
-                            <!-- <p>
+                <form role="form">
+                    <div class="form-title">
+                        <a href="index.html" class="nav-link">
+                            <img src="log.jpg" height="100px" width="100px">
+                        </a>
+                    </div>
+                    <div class="form-body">
+                        <!-- <p>
                                 <a href="https://www.google.com" class="btn btn-block btn-google"> <i class="fab fa-google"></i>   Login via
                                     Google</a>
                                 <a href="https://www.facebook.com" class="btn btn-block btn-facebook"> <i class="fab fa-facebook-f"></i>   Login via
                                     facebook</a>
                             </p> -->
-                            <div class="form-group">
-                                    <input id="userid" type="text" name="form-username" placeholder="Username or Email"
-                                        class="form-control" >                 
-                            </div>
-                            <div class="form-group">
-                                    <input id="password" type="password" name="form-password"
-                                        placeholder="Password" class="form-control" >
-                            </div>
-                            <div class="form-group text-right">
-                                <a href="forgotpassword.html" class="bold"> Forgot password?</a>
-                            </div>
-                                <button class="btn btn-warning btn-block" type="submit">Log In</button>
-                        </form>
-                        <div class="form-footer text-center template">
-                            <h5>Don't have an account?<a href="register.html"> Sign up </a> </h5>
+                        <div class="form-group">
+                            <input id="userid" type="text" name="form-username" placeholder="Username or Email" class="form-control">
                         </div>
-                    </div> <!-- end  form--body -->
-                </div><!-- end  form-title -->
-               
-            </div> <!-- end  form-container -->
+                        <div class="form-group">
+                            <input id="password" type="password" name="form-password" placeholder="Password" class="form-control">
+                        </div>
+                        <div class="form-group text-right">
+                            <a href="forgotpassword.html" class="bold"> Forgot password?</a>
+                        </div>
+                        <button class="btn btn-warning btn-block" type="submit">Log In</button>
+                </form>
+                <div class="form-footer text-center template">
+                    <h5>Don't have an account?<a href="register.html"> Sign up </a> </h5>
+                </div>
+                </div>
+                <!-- end  form--body -->
+            </div>
+            <!-- end  form-title -->
 
         </div>
-    </div><!-- end container -->
+        <!-- end  form-container -->
+
+    </div>
+    </div>
+    <!-- end container -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </body>
-
