--- a/register.html
+++ b/register.html
@@ -40,7 +40,7 @@
                         <label>*</label>
                     </div>
                     <div class="form-group ">
-                        <input id="phone" type="number" name="phone" placeholder="Phone Number" class="form-control">
+                        <input id="phone" type="text" name="phone" placeholder="Phone Number" class="form-control">
                         <span class="alert-sm alert-danger" id="phone_error_message"></span>
                         <label>*</label>
                     </div>
