--- a/register.html
+++ b/register.html
@@ -27,7 +27,7 @@
                         <img src="log.jpg" height="100px" width="100px">
                     </a>
                 </div>
-                <form role="form" name="regForm" id="regForm">
+                <form role="form" name="regForm" id="regForm" method="POST">
 
                     <div class="form-group ">
                         <input id="username" type="text" name="username" placeholder="Username" class="form-control">
